[gd_scene load_steps=6 format=3 uid="uid://biwb3djc486cw"]

[ext_resource type="Script" path="res://_scripts/scene_functionality/settings_menu.gd" id="1_esn8o"]
[ext_resource type="FontFile" uid="uid://nnxy0li7slof" path="res://_resources/fonts/Roboto-Regular.ttf" id="2_qngtr"]
[ext_resource type="Theme" uid="uid://dcdqp18uxr5af" path="res://_resources/fonts/button_theme.tres" id="3_kk032"]

[sub_resource type="LabelSettings" id="LabelSettings_7ujv2"]
font = ExtResource("2_qngtr")
font_size = 25

[sub_resource type="ImageTexture" id="ImageTexture_8ly38"]

[node name="SettingsMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_esn8o")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -338.0
offset_top = -88.0
offset_right = -125.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="RotationLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Rotation Sensitivity"
label_settings = SubResource("LabelSettings_7ujv2")

[node name="HSlider" type="HSlider" parent="VBoxContainer/RotationLabel"]
layout_mode = 2
offset_left = 52.0
offset_top = 32.5
offset_right = 339.0
offset_bottom = 55.5
size_flags_vertical = 1
max_value = 999.0
step = 10.0

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/RotationLabel"]
layout_mode = 0
offset_left = 349.0
offset_top = 32.0
offset_right = 416.063
offset_bottom = 63.0
theme_override_icons/updown = SubResource("ImageTexture_8ly38")
min_value = 1.0
max_value = 999.0
value = 999.0
rounded = true
alignment = 1

[node name="PositionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Position Sensitivity"
label_settings = SubResource("LabelSettings_7ujv2")

[node name="HSlider" type="HSlider" parent="VBoxContainer/PositionLabel"]
layout_mode = 2
offset_left = 52.0
offset_top = 32.5
offset_right = 339.0
offset_bottom = 55.5
size_flags_vertical = 1
max_value = 999.0
step = 10.0

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/PositionLabel"]
layout_mode = 0
offset_left = 349.0
offset_top = 32.0
offset_right = 416.063
offset_bottom = 63.0
theme_override_icons/updown = SubResource("ImageTexture_8ly38")
min_value = 1.0
max_value = 999.0
value = 999.0
rounded = true
alignment = 1

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -225.0
offset_top = 233.0
offset_right = -50.0
offset_bottom = 308.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_kk032")
theme_override_font_sizes/font_size = 50
text = "	BACK"
